--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 
-    background-color: aqua;
+    background-color: rgb(0, 229, 255);
     text-align: center;
 
 }
@@ -8,7 +8,7 @@ body {
 
 svg {
 
-background-color: beige;
+background-color: rgb(220, 241, 245);
 width: min(70vh, 100vh);
 height: min(70vh, 100vh);
 
